# rui-be

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  json_encoder.py  openapi.yml  requirements.frozen.txt  requirements.txt  rui-be.postman_collection.json  run_prod.sh  setup.cfg  setup.py  taxonomy.py
.github/workflows/: pipeline.yml  push.yml  release.yml
conf/: logging.yaml  multitail.conf  ramlimit.uwsgi.service  ramlimit.uwsgi.yml
rui_be/: __init__.py  app.py  changelog.py  state.py
rui_be/models/: camel_case_schema.py  entities.py  nodes.py  prediction.py  predictions.py  set.py
rui_be/models/entity/: entity.py  post_entity.py
rui_be/models/entity_legacy/: post_node_entity.py
rui_be/models/match/: match.py
rui_be/models/node/: deep_node.py  node.py  node_patch.py  post_node.py
rui_be/models/node_legacy/: deep_node.py  node.py  node_patch.py  post_node.py
rui_be/routes/: __init__.py  entities.py  matches.py  nodes.py  predictions.py  predictions_legacy.py  tracking.py  upload.py
scripts/: snapshots.fish
src/: app.py  json_encoder.py  new_taxonomy.py  taxonomy.py
src/routes/: entities.py  matches.py  nodes.py  predictions.py  upload.py
src/rui_be/: app.py
tests/: common.py  test_entities.py  test_matches.py  test_nodes.py  test_predictions.py  test_root.py  test_upload.py
tests/entities/: test_delete_entity.py  test_post_entity.py
tests/fixtures/: fixtures.py
tests/functional/: common.py  conftest.py  test_nodes.py  test_root.py  test_upload.py
tests/matches/: test_get_matches.py
tests/nodes/: test_delete_node.py  test_get_nodes.py  test_patch_node.py  test_post_node.py
tests/predictions/: test_get_node_predictions.py  test_patch_prediction.py
(+50 files in other folders)
