[metadata]
name = rui-be
version = 0.8.0

[options]
packages =
    rui_be
    rui_be.models
    rui_be.models.entity
    rui_be.models.match
    rui_be.models.node
    rui_be.models.prediction
    rui_be.routes
install_requires =
    Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@35e0dc23a07c25a59919ccb2520a2c3fcbd8a646
    Flask~=2.0.1

[options.extras_require]
dev = pytest

[options.entry_points]
console_scripts =
    rui-be = src.rui_be.app:main
