[metadata]
name = rui-be
version = 0.9.0

[options]
packages =
    rui_be
    rui_be.models
    rui_be.models.entity
    rui_be.models.match
    rui_be.models.node
    rui_be.models.prediction
    rui_be.routes
install_requires =
    Draug @ git+ssh://git@git.ramlimit.de/deepkg/draug.git@7736e20e225d06c5a6caf14e5047e7ab5de70372
    Flask~=2.0.1

[options.extras_require]
dev =
    black
    pytest

[options.entry_points]
console_scripts =
    rui-be = src.rui_be.app:main
